miniextendr-macros/tests/ui/fn_return_invalid_value.stderr
error: prefer must be one of: auto, list, externalptr, vector/native
 --> tests/ui/fn_return_invalid_value.rs:5:24
  |
5 | #[miniextendr(prefer = "bogus")]
  |                        ^^^^^^^
